# rlfit

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
examples/: basic_forget_qlearning.ipynb  multi_lr_rew.ipynb  subrew_subvalue.ipynb  utils.py
src/rlfit/: __init__.py  rlfit.py
