[project]
name = "rlfit"
version = "0.1.0"
description = "Fitting reinforcement learning model to behavior data under bandits."
authors = [
    {name = "Hao Zhu", email = "zhuh@cs.uni-freiburg.de"},
    {name = "Jasper Hoffmann"},
    {name = "Baohe Zhang"},
    {name = "Joschka Boedecker"}
]
readme = "README.md"
license = "MIT"
keywords = ["convex optimization", "model fitting", "reinforcement learning", "multi-armed bandits"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.6.6",
    "numpy>=2.3.1",
]

[project.urls]
repository = "https://github.com/nrgrp/dlfm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlfit"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]